# FileFusionator

./: PARTICLES.md  README.md  package-lock.json  package.json
src/: index.html  script.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
